--- a/index.html
+++ b/index.html
@@ -1,23 +1,15 @@
 <!doctype html>
-<html lang="en" style="overflow-y:scroll;">
+<html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=yes">
-
-    <title>Robots Monitor</title>
-    <meta name="description" content="frontend of bebuch/robots_simulation">
-
-    <!-- See https://goo.gl/OOhYW5 -->
-    <link rel="manifest" href="/manifest.json">
-
-    <script src="/bower_components/webcomponentsjs/webcomponents-loader.js"></script>
-
-    <link rel="import" href="/extended-element.html">
+    <meta http-equiv="refresh" content="0;url=demo/" />
+    <title>robots-monitor</title>
   </head>
   <body>
-    <extended-element></extended-element>
-    <noscript>
-      Please turn JavaScript on.
-    </noscript>
+    <!--
+        Visit demo/index.html to see live examples of your element running.
+        This page will automatically redirect you there when run in the browser
+        with `polymer serve --open`.
+      -->
   </body>
 </html>
