--- a/test/robots-monitor_test.html
+++ b/test/robots-monitor_test.html
@@ -9,7 +9,7 @@
     <script src="../bower_components/webcomponentsjs/webcomponents-lite.js"></script>
     <script src="../bower_components/web-component-tester/browser.js"></script>
 
-    <link rel="import" href="../src/robots-monitor.html">
+    <link rel="import" href="../robots-monitor.html">
   </head>
   <body>
 
