add size to state-display

--- a/demo/demo-element.html
+++ b/demo/demo-element.html
@@ -3,7 +3,6 @@
 <link rel="import" href="../../paper-toggle-button/paper-toggle-button.html">
 <link rel="import" href="../robots-monitor.html">
 
-
 <dom-module id="demo-element">
   <template>
     <style>
@@ -12,7 +11,7 @@
       }
     </style>
     <p>
-      <state-display style="display:inline-block;" state="[[connected]]"></state-display>
+      <state-display style="display:inline-block;margin:0 0.5em;" size="1.5em" state="[[connected]]"></state-display>
       <paper-toggle-button style="display:inline-block;" checked="{{vertical}}">vertical</paper-toggle-button>
       <paper-toggle-button style="display:inline-block;" checked="{{cube}}">cube</paper-toggle-button>
     </p>
