--- a/robots-monitor.html
+++ b/robots-monitor.html
@@ -163,9 +163,7 @@
         this.domReady = true;
 
         this._connect();
-
-        this._drawCurrentAndVoltage();
-        this._drawRobots();
+        this._resize();
       }
 
       _connect(){
