--- a/robots-monitor.html
+++ b/robots-monitor.html
@@ -27,7 +27,7 @@
 
       #box{
         display: block;
-        transition: all 0.85s cubic-bezier(0.175,0.885,0.320,1.275);
+        transition: all 0.85s;
 
         overflow: visible;
         text-align: center;
@@ -36,7 +36,7 @@
       }
 
       .robots{
-        transition: all 0.85s cubic-bezier(0.175,0.885,0.320,1.275);
+        transition: all 0.85s;
         display: inline-block;
         overflow: visible;
         position: absolute;
