--- a/robots-monitor.html
+++ b/robots-monitor.html
@@ -11,11 +11,11 @@
       #cv{
         display:block;
         width:100%;
+        transition: all 0.85s;
       }
 
       .robots{
         display:inline-block;
-/*         width:calc(100% / 3); */
       }
 
       /* 3D Cube */
@@ -550,23 +550,19 @@
       }
 
       _resize(){
-        this.$.cv.width = this.$.cv.clientWidth;
+        let reference = this.$.cv.clientWidth;
 
-        let size = this.$.cv.width / (this.vertical ? 1 : 3);
+        this.$.cv.width = reference;
+
+        let size = reference / (this.vertical ? 1 : 3);
 
         if(this.vertical){
           this.$.cv.height = size / 4;
+          this.$.cv.style.height = size / 4 + 'px';
 
           if(this.cube){
             size *= 0.7;
           }
-
-          this.$.top.width = size;
-          this.$.top.height = size;
-          this.$.front.width = size;
-          this.$.front.height = size;
-          this.$.right.width = size;
-          this.$.right.height = size;
 
           if(this.cube){
             this.$.top.style.top = (size * 0.30) + 'px';
@@ -585,13 +581,7 @@
           }
         }else{
           this.$.cv.height = size / 3;
-
-          this.$.top.width = size;
-          this.$.top.height = size;
-          this.$.front.width = size;
-          this.$.front.height = size;
-          this.$.right.width = size;
-          this.$.right.height = size;
+          this.$.cv.style.height = size / 3 + 'px';
 
           if(this.cube){
             this.$.top.style.top = (size / 3.5) +  'px';
@@ -609,6 +599,20 @@
             this.$.right.style.left = size * 2 + 'px';
           }
         }
+
+        this.$.top.style.width = size + 'px';
+        this.$.top.style.height = size + 'px';
+        this.$.front.style.width = size + 'px';
+        this.$.front.style.height = size + 'px';
+        this.$.right.style.width = size + 'px';
+        this.$.right.style.height = size + 'px';
+
+        this.$.top.width = size;
+        this.$.top.height = size;
+        this.$.front.width = size;
+        this.$.front.height = size;
+        this.$.right.width = size;
+        this.$.right.height = size;
 
         if(this.cube){
           this.$.box.style.transform = 'rotateX(-20deg) rotateY(-45deg)';
