--- a/demo/index.html
+++ b/demo/index.html
@@ -18,7 +18,7 @@
 
   <body>
     <div class="vertical-section-container centered">
-      <h3>rotbots-monitor demo</h3>
+      <h3>robots-monitor demo</h3>
 
       <demo-snippet>
         <demo-element></demo-element>
