reconnect only if attribute active is true

--- a/demo/demo-element.html
+++ b/demo/demo-element.html
@@ -15,7 +15,7 @@
       <paper-toggle-button style="display:inline-block;" checked="{{vertical}}">vertical</paper-toggle-button>
       <paper-toggle-button style="display:inline-block;" checked="{{cube}}">cube</paper-toggle-button>
     </p>
-    <robots-monitor id="ws_control" port="8090" connected="{{connected}}" cube$="[[cube]]" vertical$="[[vertical]]"></robots-monitor>
+    <robots-monitor id="ws_control" port="8090" active="" connected="{{connected}}" cube$="[[cube]]" vertical$="[[vertical]]"></robots-monitor>
   </template>
 
   <script>
